feat: integrate Spring AI for movie recommendations and improve artist search